<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.example</groupId>
        <artifactId>be-test</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <groupId>org.example</groupId>
    <artifactId>pong</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>pong</name>
    <description>pong</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>17</java.version>

    </properties>
    <dependencies>

        <!--        <dependency>-->
        <!--            <groupId>io.projectreactor</groupId>-->
        <!--            <artifactId>reactor-test</artifactId>-->
        <!--            <scope>test</scope>-->
        <!--        </dependency>-->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.11</version>
                <configuration>
                    <excludes>
                        <exclude>org/example/pong/service/*</exclude>
                        <exclude>org/example/pong/entry/**/*</exclude>
                        <exclude>org/example/pong/PongApplication.java</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <!-- 添加Spock测试用例的发现机制 -->
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m
                        -javaagent:${settings.localRepository}/org/spockframework/spock-core/${spock.version}/spock-core-${spock.version}.jar
                        -Dspock.configuration=${project.basedir}/src/test/resources/spock-configuration.xml
                    </argLine>
                    <includes>
                        <include>**/*.groovy</include>
                    </includes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
